res/examples/valid/stmt_assign_let_with_value_of_block_returning_identifier.eg
let a: bool = false;
let b: bool = { !a };