res/examples/invalid/let_decl_typed_as_string_with_bool_value_type.eg
let a: string = false;

// out: TypeError: mismatched types: expected type `string` but received `bool`